@@ -296,8 +296,9 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			}
 			else if(vars->type == ASN_COUNTER64)
 			{
-				SET_UI64_RESULT(value, ((vars->val.counter64->high)<<32)+(vars->val.counter64->low)); /* INCORRECT CODE */
-/* FIX for 32bit system */ /* SET_UI64_RESULT(value, (((zbx_uint64_t)vars->val.counter64->high)<<32)+((zbx_uint64_t)vars->val.counter64->low)); */
+				/* Incorrect code for 32 bit platforms */
+/*				SET_UI64_RESULT(value, ((vars->val.counter64->high)<<32)+(vars->val.counter64->low));*/
+				SET_UI64_RESULT(value, (((zbx_uint64_t)vars->val.counter64->high)<<32)+((zbx_uint64_t)vars->val.counter64->low));
 			}
 			else if(vars->type == ASN_INTEGER
 #define ASN_FLOAT           (ASN_APPLICATION | 8)
